[workspace]
members = [
    "contracts/cw20-wrapped",
    "contracts/deltaswap",
    "contracts/shutdown-deltaswap",
    "contracts/token-bridge",
    "contracts/shutdown-token-bridge",
    "contracts/mock-bridge-integration",
    "packages/accountant",
    "contracts/global-accountant",
    "packages/deltaswap-bindings",
    "packages/cw_transcode",
    "contracts/deltaswap-ibc",
    "contracts/deltachain-ibc-receiver",
    "contracts/ibc-translator"
]

# Needed to prevent unwanted feature unification between normal builds and dev builds.  See
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions for more details.
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[patch.crates-io]
accountant = { path = "packages/accountant" }
cw_transcode = { path = "packages/cw_transcode" }
cw20-wrapped-2 = { path = "contracts/cw20-wrapped" }
serde_deltaswap = { path = "../sdk/rust/serde_deltaswap" }
token-bridge-cosmwasm = { path = "contracts/token-bridge" }
global-accountant = { path = "contracts/global-accountant" }
deltaswap-bindings = { path = "packages/deltaswap-bindings" }
deltaswap-cosmwasm = { path = "contracts/deltaswap" }
deltaswap-sdk = { path = "../sdk/rust/core" }
deltachain-ibc-receiver = { path = "contracts/deltachain-ibc-receiver" }
deltaswap-ibc = { path = "contracts/deltaswap-ibc" }
